--- a/5/assets/styles.css
+++ b/5/assets/styles.css
@@ -89,7 +89,66 @@ h1, h3, h5, h6 {
     text-align: left;    
 }
 
+.details-header {
+    font-family: Verdana, Geneva, Tahoma, sans-serif;
+    color: #979797;
+    font-weight:200;
+    text-transform: uppercase;
+    font-size:12px;
+}
+
+.details-text {
+    font-family: Verdana, Geneva, Tahoma, sans-serif;
+}
+
 .text {
     float:left;
     width:50%;
 }
+
+.passenger {
+    font-family: Verdana, Geneva, Tahoma, sans-serif;
+    text-transform: uppercase;
+    font-weight: 200;
+    color:#979797;
+    padding-top:20px;
+}
+
+.passenger-text {
+    font-family: Verdana, Geneva, Tahoma, sans-serif;
+    font-weight:200;
+    font-size:15px;
+}
+
+.class {
+    font-family: Verdana, Geneva, Tahoma, sans-serif;
+    text-transform: uppercase;
+    font-weight: 200;
+    color:#979797;
+    padding-top:20px;
+}
+
+.class-text {
+    font-family: Verdana, Geneva, Tahoma, sans-serif;
+    font-weight:200;
+    font-size:15px;
+}
+
+.departure {
+    font-family: Verdana, Geneva, Tahoma, sans-serif;
+    text-transform: uppercase;
+    font-weight: 200;
+    color:#979797;
+    padding-top:20px;
+}
+
+.departure-text {
+    font-family: Verdana, Geneva, Tahoma, sans-serif;
+    font-weight:200;
+    font-size:15px;
+}
+
+.qr img{
+    padding-top:20px;
+}
+
